--- a/index.css
+++ b/index.css
@@ -89,6 +89,21 @@ body,html {
     font-family: 'Comfortaa', cursive;
 }
 
+
+#portfolio div h2 {
+    font-size:25px;
+    background-image: linear-gradient(to left, #FF416C 0%, #FF4B2B 100%);
+    -webkit-background-clip:text;
+    background-clip:text;
+    -webkit-text-fill-color: transparent;
+    background-size:500% 500% !important;
+    -webkit-animation: Gradient 20s ease infinite;
+    -moz-animation: Gradient 20s ease infinite;
+    -o-animation: Gradient 20s ease infinite;
+    animation: Gradient 20s ease infinite;
+    font-family: 'Comfortaa', cursive;
+}
+
 #portfolio a {
     background-image: linear-gradient(to left, #FF416C 0%, #FF4B2B 100%);
     -webkit-background-clip:text;
@@ -170,3 +185,31 @@ body,html {
   width: 100%;
   height: 100%;  
 }
+
+
+.project {
+  width: 400px;
+  height: 400px;
+  border: 1px solid #c3c3c3;
+  display: inline-block;
+}
+
+iframe {
+    margin: 0px !important;
+    padding: 0px !important;
+    border: 0px !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
